@@ -1,3 +1,6 @@
+6/7/12
+  Fix for transient window mapping order
+
 5/7/12
   Remove transient windows that flash up on one desktop then show on another from the desktop
 
